<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:textSize="20sp"
        android:textColor="#4216A6"
        android:text="@string/titulo"
        android:textAlignment="center"

        android:id="@+id/tv_titulo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"

        android:hint="@string/id_cachorro_1"
        android:inputType="number"

        android:id="@+id/et_idCachorro1"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/et_idCachorro1"

        android:hint="@string/id_cachorro_2"
        android:inputType="number"

        android:id="@+id/et_idCachorro2"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/et_idCachorro2"

        android:text="@string/botao_comprar"
        android:textSize="20sp"

        android:onClick="comprar"
        android:id="@+id/bt_comprar"
        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_comprar"
        app:layout_constraintLeft_toLeftOf="parent"

        android:src="@drawable/cachorro_feliz_1"
        android:id="@+id/iv_cachorroFeliz1"
        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_comprar"
        app:layout_constraintRight_toRightOf="parent"

        android:src="@drawable/cachorro_feliz_2"
        android:id="@+id/iv_cachorroFeliz2"
        />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_cachorroFeliz2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/apenas_para_crianca"
        />

</androidx.constraintlayout.widget.ConstraintLayout>